<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity"

    android:orientation="vertical"
    android:gravity="center">

    <!-- Info bar -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        >

        <!-- Display name of text -->
        <TextView
            android:id="@+id/testNameDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_test"
            android:layout_alignParentStart="true"
            android:padding="15dp"
            />

        <!-- Score indicator -->
        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:layout_toLeftOf="@+id/percent"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="5dp"
            />
        <TextView
            android:id="@+id/percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0%"
            android:layout_alignParentRight="true"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingRight="15dp"
            />

        <!-- Progress bar -->
        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_centerHorizontal="true"

            android:max="100"
            android:progress="0"
            android:indeterminate="false"

            android:minHeight="50dp"
            android:minWidth="100dp"
            />





    </RelativeLayout>

    <!-- Question top half -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"

        android:gravity="center"
        android:padding="30dp"
        >

        <TextView
            android:id="@+id/questionView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_question"
            android:gravity="center"
            android:layout_gravity="center"
            />

    </FrameLayout>

    <!-- Answers bottom half -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button"
            android:layout_weight="1"
            android:layout_gravity="center"
            />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button"
            android:layout_weight="1"
            android:layout_gravity="center"
            />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button"
            android:layout_weight="1"
            android:layout_gravity="center"
            />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button"
            android:layout_weight="1"
            android:layout_gravity="center"
            />



    </LinearLayout>

</LinearLayout>